Attempting to fix more PermGen issues. Reverting...
git-svn-id: https://svn.kuali.org/repos/kpme/trunk@2362 6c5f4195-72ea-6250-e7e4-e498f552a5df