@@ -402,7 +402,11 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${surefire.plugin.version}</version>
                 <configuration>
-                    <argLine>-Xms512m -Xmx2048m -XX:MaxPermSize=512m</argLine>
+                    <!--
+                         <excludes>
+                             <exclude>**/*</exclude>
+                         </excludes>
+                         -->
                 </configuration>
                 <executions>
                     <execution>
